--- a/src/App.css
+++ b/src/App.css
@@ -191,18 +191,26 @@ color: #FFFFFF;
 .Name{
   width:100%;
   height: 48px;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+border-radius: 8px;
 }
 .Email{
   width:100%;
   height: 48px;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+border-radius: 8px;
 }
 .Phone_number{
   width:100%;
   height: 48px;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+border-radius: 8px;
 }
 .Message{
   width:100%;
   height: 128px;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+border-radius: 8px;
 }
 .imagea{
   width:100%;
